fix verify and auth page overflows

--- a/src/components/auth/PasswordResetDialog/index.module.scss
+++ b/src/components/auth/PasswordResetDialog/index.module.scss
@@ -41,6 +41,5 @@
 .dialogContent {
   display: flex;
   flex-direction: column;
-  margin-top: -10em;
   color: $gradient-color-start;
 }
