--- a/src/components/auth/RequestResetDialog/index.module.scss
+++ b/src/components/auth/RequestResetDialog/index.module.scss
@@ -35,7 +35,6 @@
 .dialogContent {
   display: flex;
   flex-direction: column;
-  margin-top: -10em;
   color: $gradient-color-start;
 }
 
