--- a/styles/Auth.module.scss
+++ b/styles/Auth.module.scss
@@ -35,3 +35,10 @@
     width: 100%;
   }
 }
+
+// prevents overflow on forgot password dialog
+div#__next,
+div#__next > div {
+  height: fit-content;
+  width: 100%;
+}
