--- a/styles/Verify.module.scss
+++ b/styles/Verify.module.scss
@@ -15,7 +15,6 @@
 
 .dialog {
   width: 100%;
-  height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -32,7 +31,20 @@
   box-shadow: $dialog-container-box-shadow;
   backdrop-filter: blur(4px);
   border-radius: 10px;
-  margin-top: -5em;
+
+  margin-top: 250px;
+
+  @include down($breakpoint-sm) {
+    margin-top: 150px;
+  }
+
+  @include height-down($breakpoint-sm) {
+    margin-top: 140px;
+  }
+
+  @include down($breakpoint-xs) {
+    margin-top: 130px;
+  }
 }
 
 .dialogText {
